--- a/vercel.json
+++ b/vercel.json
@@ -4,16 +4,21 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/static"
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "routes": [
-    { 
-      "handle": "filesystem"
+    {
+      "src": "/assets/(.*)",
+      "headers": { "cache-control": "public, max-age=31536000, immutable" },
+      "dest": "/assets/$1"
     },
     {
-      "src": "/.*",
-      "dest": "index.html"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 } 
