--- a/package.json
+++ b/package.json
@@ -8,14 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "vercel-build": "vite build"
-  },
-  "dependencies": {
-    "@supabase/supabase-js": "^2.47.8",
-    "framer-motion": "^11.15.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "vercel-build": "npx vite build"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -31,6 +24,11 @@
     "tailwindcss": "^3.4.16",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "@supabase/supabase-js": "^2.47.8",
+    "framer-motion": "^11.15.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0"
   }
 }
