--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
-  "version": 2,
-  "buildCommand": "npx vite build",
-  "outputDirectory": "dist",
-  "framework": "vite",
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 } 
